--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(font-awesome.min.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css);
 
 /*
 	Hyperspace by HTML5 UP
